Exclude linter rule for file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,10 @@ AllCops:
     - "db/schema.rb"
     - "vendor/**/*"
 
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - "app/commands/decidim/extra_user_fields/admin/update_extra_user_fields.rb"
+
 RSpec/FilePath:
   Exclude:
     - "spec/serializers/user_export_serializer_spec.rb"
